# NEPIX_TUI

./: Cargo.toml  README.md  install.ps1  install.sh  package-release.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  log.rs  main.rs  mc.rs  ui.rs
themes/: themes.toml
